# scattergories

./: .cspell.yml  .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Caddyfile  Dockerfile  README.md  biome.json  cspell.yaml  cspell.yml  docker-compose.yml  eslint.config.mjs  index.html  justfile  lefthook.yml  manifest.json  mise.toml  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  tsconfig.base.json  tsconfig.node.json  vite.config.ts  wrangler.jsonc
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/actions/setup-app/: action.yml
.github/workflows/: ci.yml  e2e.yml  infra.yml  security.yml  tools.yml
docs/: architecture.md  quality.md
docs/adr/: 0001-local-first-no-backend.md  README.md
public/: manifest.json  sw.js
scripts/: check-bundle-budgets.mjs  generate-icons.mjs
scripts/ci/: infra-check.sh
src/: App.css  App.locale.test.tsx  App.test.tsx  App.tsx  app.categories.test.tsx  app.round.test.tsx  app.settings.test.tsx  app.shell.test.tsx  app.shortcuts.test.tsx  index.css  main.tsx  manifest.test.ts  setupTests.ts  vite-env.d.ts
src/app/: App.tsx  AppFooter.tsx  AppLoading.tsx  ErrorBoundary.test.tsx  ErrorBoundary.tsx  GameShell.tsx  HowToPlayModal.tsx  ShortcutsSheet.tsx  WelcomeOverlay.tsx  onboarding.test.tsx  useAppControls.test.ts  useAppControls.ts  useCategoryBoard.test.ts  useCategoryBoard.ts  useGameController.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useOnboarding.ts  usePromptDeckState.ts  useRoundSetup.ts
src/components/: AchievementsSection.tsx  ActionBar.tsx  AppFooter.tsx  AppRail.tsx  CategoriesPanel.tsx  CategoryChecklist.tsx  ErrorBoundary.tsx  GameShell.tsx  HowToPlayModal.tsx  OnboardingBanner.tsx  PauseOverlay.tsx  Playmat.tsx  RoundEndScreen.tsx  SettingsSheet.tsx  ShortcutsSheet.tsx  TimerPanel.tsx  TimerRing.tsx
src/components/ui/: Badge.tsx  BrandMark.tsx  Button.tsx  Field.tsx  Icon.tsx  IconButton.tsx  Sheet.tsx  Toast.tsx  ToggleGroup.tsx
src/domain/game/: constants.json  constants.test.ts  constants.ts  localeWeights.test.ts  localeWeights.ts  roundReducer.test.ts  roundReducer.ts  utils.test.ts  utils.ts
src/features/categories/: CategoriesPanel.tsx  CategoryChecklist.tsx
src/features/round/: ActionBar.tsx  LetterHero.tsx  PauseOverlay.tsx  Playmat.tsx  RoundEnd.tsx  RoundEndScreen.tsx  TimerRing.stage.test.ts  TimerRing.tsx  rollAnimation.test.ts  rollAnimation.ts  timerRing.stage.test.ts  useAudio.test.ts  useAudio.ts  useLetterRoller.ts  (+3 more)
src/game/: constants.json  constants.test.ts  constants.ts  localeWeights.ts  roundReducer.test.ts  roundReducer.ts  utils.test.ts  utils.ts
src/hooks/: useAudio.test.ts  useAudio.ts  useCategoryStrikes.ts  useGameSession.ts  useIsDesktopLayout.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useLetterRoller.test.ts  useLetterRoller.ts  useOnboarding.ts  useReturnFocus.ts  useRound.test.ts  useRound.ts  useSettings.test.ts  useSettings.ts  useStatsSnapshot.ts  useSwipeToggle.test.ts  useSwipeToggle.ts  useUnlockedAchievements.ts
src/i18n/: config.ts  localeHealth.test.ts  localeHealth.ts  localeRegistry.ts  react-i18next.d.ts
src/lib/: achievements.ts  share.ts  stats.ts  viewTransitions.ts
src/settings/: SettingsProvider.tsx  schema.ts
src/styles/: base.css  components.css  layout.css  playmat.css  primitives.css  tokens.css
src/test/: constants.ts  gameConstants.ts  renderApp.tsx
tests/: a11y.spec.ts  app.spec.ts  contrast.spec.ts  fixtures.ts  game-flow.spec.ts  onboarding.spec.ts  persistence-i18n.spec.ts  smoke.spec.ts
tools/: .coverage  .gitignore  README.md  justfile  pyproject.toml
tools/letter_frequency/: __init__.py  wikitext_frequencies.py
tools/letter_frequency/data/wikitext-103-raw-v1/: frequencies.tsv  letter_weights.ts
tools/letter_frequency/data/wikitext-2-raw-v1/: frequencies.tsv  letter_weights.ts
tools/src/scattergories_tools/: __init__.py  cli.py
tools/src/scattergories_tools/commands/: __init__.py  doctor.py  options.py  translate.py  weights.py
tools/src/scattergories_tools/shared/: __init__.py  context.py  logging.py  paths.py  registry.py
tools/src/scattergories_tools/translate/: __init__.py  cache.py  engine.py  parse.py
tools/src/scattergories_tools/weights/: __init__.py  analyze.py  render.py
tools/tests/: __init__.py  conftest.py  fakes.py  test_cli_doctor.py  test_cli_registration.py  test_cli_translate.py  test_cli_weights.py  test_registry.py  test_translation_cache.py  test_translation_engine.py  test_translation_parse.py  test_translation_service.py  test_weights_analyze.py  test_wikitext_frequencies.py
tools/tests/fixtures/: registry.json
tools/translation/: __init__.py  service.py
(+49 files in other folders)
