[build-system]
  build-backend = "uv_build"
  requires      = ["uv_build>=0.11.7,<0.12"]

[project]
  dependencies    = ['datasets>=4.8.4', 'tqdm>=4.67.0', 'typer>=0.16.0']
  description     = 'Internal Python tooling for Scattergories locale assets and data workflows'
  name            = 'scattergories-tools'
  readme          = 'README.md'
  requires-python = '>=3.14'
  version         = '0.2.0'

  [project.scripts]
    sg-tools = 'scattergories_tools.cli:main'

[dependency-groups]
  dev         = ['pytest>=9.0.3', 'pytest-cov>=6.0.0', 'ruff>=0.15.10', 'ty>=0.0.29', "uv-build>=0.11.7,<0.12"]
  translation = ['argostranslate>=1.9.6']

[tool.pytest.ini_options]
  addopts = [
    '--cov-branch',
    '--cov-report=term-missing',
    '--cov=src/scattergories_tools',
    '--strict-config',
    '--strict-markers',
    '--tb=short',
    '-q',
  ]
  testpaths = ['tests']

[tool.ruff]
  extend-exclude               = ['.venv', '.cache', 'out']
  format.docstring-code-format = true
  line-length                  = 100
  src                          = ['src', 'tests']
  target-version               = 'py314'

  [tool.ruff.lint]
    fixable = ['ALL']

    ignore = [
      # Avoid conflicts with the formatter
      "COM812", # missing-trailing-comma

      # Overly strict rules
      "ANN204", # missing-return-type-special-method
      "D105",   # undocumented-magic-method
      "D107",   # undocumented-public-init
    ]
    select = ['ALL']

    [tool.ruff.lint.pydocstyle]
      convention = 'google'

    [tool.ruff.lint.per-file-ignores]
      'tests/**/*.py' = ['S101']
